--- a/backend/src/main/resources/static/index.html
+++ b/backend/src/main/resources/static/index.html
@@ -18,21 +18,23 @@
 
     <body>
         <div>
-            <h1>Heading</h1>
-            <p class="user-id">The User ID is : </p>
-            <p class="user-name">The User name is : </p>
-            <p class="user-email">The User email is : </p>
+            <!-- .container is main centered wrapper -->
+            <div class="container">
+                <h1>Users list</h1>
+                <p class="user-id">The User ID is : </p>
+                <p class="user-name">The User name is : </p>
+                <p class="user-email">The User email is : </p>
 
-            <table>
-                <thead>
+                <table>
+                    <thead>
                     <tr>
                         <th>Name</th>
                         <th>Age</th>
                         <th>Height</th>
                         <th>Location</th>
                     </tr>
-                </thead>
-                <tbody>
+                    </thead>
+                    <tbody>
                     <tr>
                         <td>Stephen Curry</td>
                         <td>27</td>
@@ -45,15 +47,15 @@
                         <td>2,01</td>
                         <td>Los Angeles, CA</td>
                     </tr>
-                </tbody>
-            </table>
+                    </tbody>
+                </table>
 
-            <!-- Default Button -->
-            <a class="button" href="#">Default Button</a>
+                <!-- Default Button -->
+                <a class="button" href="#">Default Button</a>
 
-            <!-- Outlined Button -->
-            <button class="button button-outline">Outlined Button</button>
-
+                <!-- Outlined Button -->
+                <button class="button button-outline">Outlined Button</button>
+            </div>
         </div>
     </body>
 </html>
