--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,7 +8,7 @@
     <!-- CSS Reset <-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
     <!-- Milligram CSS minified -->
-    <link rel="stylesheet" href="styles/milligram.min.css">
+    <link rel="stylesheet" href="assets/styles/milligram.min.css">
   </head>
   <body>
     <h1>Yo from index.html ...</h1>
@@ -16,6 +16,6 @@
       <!-- This element's contents will be replaced with your component. -->
     </div>
     <!-- must be after container ! -->
-    <script src="../build/app.js"></script>
+    <script src="build/app.js"></script>
   </body>
 </html>
