--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,11 +11,10 @@
     <link rel="stylesheet" href="assets/styles/milligram.min.css">
   </head>
   <body>
-    <h1>Yo from index.html ...</h1>
-    <div id="root">
+    <div id="root" class="container">
       <!-- This element's contents will be replaced with your component. -->
     </div>
     <!-- must be after container ! -->
-    <script src="build/app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
