--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
     <!-- Milligram CSS minified -->
     <link rel="stylesheet" href="assets/styles/milligram.min.css">
+    <link rel="stylesheet" href="assets/styles/main.css">
   </head>
   <body>
     <div id="root" class="container">
